// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AsciidocPage > renders correctly for installation page 1`] = `
<div
  class="doc-wrapper pt-4 light:bg-white"
>
  <div
    class="doc-header border-b border-white/10 light:bg-white light:border-gray-200"
  >
    <div
      class="mx-auto max-w-[1400px] w-full px-4 sm:px-6 lg:px-8 py-6 lg:pl-[calc(16rem+2rem)]"
    >
      <div
        class="flex items-center justify-between mb-3"
      >
        <nav
          aria-label="Breadcrumb"
          class="flex items-center text-sm text-gray-400 light:text-gray-500"
        >
          <a
            class="hover:text-white light:hover:text-gray-900 transition-colors"
            href="/"
          >
            Home
          </a>
          <svg
            class="w-4 h-4 mx-1.5 text-gray-600"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="text-gray-200 light:text-gray-900"
          >
            Page Title
          </span>
        </nav>
        <button
          aria-label="Switch to light mode"
          class="flex items-center gap-2 text-xs transition-colors px-2 py-1 rounded-md border text-gray-400 hover:text-white border-white/10 hover:border-white/20"
        >
          <svg
            class="w-3.5 h-3.5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Light
        </button>
      </div>
      <h1
        class="text-2xl md:text-3xl font-semibold text-white light:text-gray-900 tracking-tight"
      >
        Page Title
      </h1>
    </div>
  </div>
  <div
    class="doc-layout mx-auto max-w-[1400px] w-full px-4 sm:px-6 lg:px-8 pb-16 light:bg-white"
  >
    <div
      class="flex flex-col lg:flex-row"
    >
      <aside
        aria-label="Documentation navigation"
        class="hidden lg:block w-64 flex-shrink-0"
      >
        <div
          class="doc-sidebar sticky top-20 overflow-y-auto max-h-[calc(100vh-5rem)] py-8 pr-6 border-r border-white/10 light:border-gray-200"
        >
          <nav
            aria-label="Documentation navigation"
            class="w-full"
          >
            <div
              class="mb-3"
            >
              <p
                class="text-xs font-semibold uppercase tracking-wider text-gray-400 light:text-gray-500 mb-3 px-3"
              >
                Documentation
              </p>
            </div>
            <ul
              class="space-y-0.5"
            >
              <li>
                <a
                  class="block px-3 py-2 rounded-md text-sm transition-colors duration-150 text-gray-300 hover:bg-white/5 hover:text-white light:text-gray-900 light:hover:bg-gray-100 light:hover:text-gray-900"
                  href="/test"
                >
                  Page Title
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </aside>
      <div
        class="flex-1 min-w-0 py-8 lg:px-10"
        role="article"
      >
        <section
          class="mb-8"
        >
          <div
            class="install-card my-8 max-w-xl"
          >
            <div
              class="install-tabs flex gap-1 mb-4"
            >
              <button
                class="install-tab flex items-center gap-1.5 py-2 px-3 text-sm font-semibold rounded-lg transition-colors text-white/40 hover:text-white/70"
              >
                <svg
                  class="inline-block w-4 h-4"
                  fill="currentColor"
                  viewBox="0 0 384 512"
                >
                  <path
                    d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-62.1 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"
                  />
                </svg>
                macOS
              </button>
              <button
                class="install-tab flex items-center gap-1.5 py-2 px-3 text-sm font-semibold rounded-lg transition-colors install-tab--active bg-white/10 text-white"
              >
                <svg
                  class="inline-block w-4 h-4"
                  fill="currentColor"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M0 93.7l183.6-25.3v177.4H0V93.7zm0 324.6l183.6 25.3V268.4H0v149.9zm203.8 28L448 480V268.4H203.8v177.9zm0-380.6v180.1H448V32L203.8 65.7z"
                  />
                </svg>
                Windows
              </button>
              <button
                class="install-tab flex items-center gap-1.5 py-2 px-3 text-sm font-semibold rounded-lg transition-colors text-white/40 hover:text-white/70"
              >
                <svg
                  class="inline-block w-4 h-4"
                  fill="currentColor"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M220.8 123.3c1 .5 1.8 1.7 3 1.7 1.1 0 2.8-.4 2.9-1.5.2-1.4-1.9-2.3-3.2-2.9-1.7-.7-3.9-1-5.5-.1-.4.2-.8.7-.6 1.1.3 1.3 2.3 1.1 3.4 1.7zm-21.9 1.7c1.2 0 2-1.2 3-1.7 1.1-.6 3.1-.4 3.5-1.6.2-.4-.2-.9-.6-1.1-1.6-.9-3.8-.6-5.5.1-1.3.6-3.4 1.5-3.2 2.9.1 1 1.8 1.5 2.8 1.4zM420 403.8c-3.6-4-5.3-11.6-7.2-19.7-1.8-8.1-3.9-16.8-10.5-22.4-1.3-1.1-2.6-2.1-4-2.9-1.3-.8-2.7-1.5-4.1-2 9.2-27.3 5.6-54.5-3.7-79.1-11.4-30.1-31.3-56.4-46.5-74.4-17.1-21.5-33.7-41.9-33.4-72C311.1 85.4 315.7.1 234.8 0 132.4-.2 158 103.4 156.9 135.2c-1.7 23.4-6.4 41.8-22.5 64.7-18.9 22.5-45.5 58.8-58.1 96.7-6 17.9-8.8 36.1-6.2 53.3-6.5 5.8-11.4 14.7-16.6 20.2-4.2 4.3-10.3 5.9-17 8.3s-14 6-18.5 14.5c-2.1 3.9-2.8 8.1-2.8 12.4 0 3.9.6 7.9 1.2 11.8 1 6.4 2.1 12.5 5.7 17.4C24.5 437 26 438 27.7 438.5c.6.2 1.3.3 2 .3 1.7 0 3.3-.6 5.3-1.4 4.2-1.8 8.7-4.7 13.6-8.8 16.3-13.5 30.7-25.9 57.9-23.8 8 .6 15.4 1.5 21.8 2 2.1.2 4.1.4 6.1.5 16.7 1.9 30.5-.7 42.1-8.4 9.9-6.8 18-16.2 24.8-28.2 2.3.3 4.6.7 6.8 1.1 14.6 2.6 28.7 5.1 47.6 1.2 6.6-1.4 13.6-4.3 20.3-7 7.8-3.2 15.3-6.2 22.2-6.2 13.8 0 20.7-3.2 29.5-10.6 8.5-7.2 18.4-18.7 37.4-39.5l.1-.1zm-353.5 65c-4.3 3.6-8.2 6.1-11.3 7.2-2.4 1-3.7.7-4.7-.2-1-.9-1.8-2.5-2.5-4.5-1.5-4.1-2.2-9.7-3-15-.5-3.6-1-7.2-1-10.4 0-3.2.5-6.2 1.9-8.8 2.9-5.5 8.1-8.2 14.5-10.4 6.8-2.3 14.6-4.7 20.3-11.1 5.7-6.1 10.2-14.2 16.6-19.8.6 2.4 1.4 5 2.3 7.6 2.7 7.8 6.2 16.3 9.2 23.9-17.6 2.1-30.2 13.2-42.3 41.5zm291.5-38.6c-18.3 20-27.8 31.5-34.9 37.5-7.1 6-12.2 7-22.9 7-9.1 0-18.2 3.8-26.7 7.3-6.2 2.5-12.2 5.2-17.4 6.3-15.4 3.2-27.4 1.2-41.6-1.3-2.5-.4-5-.9-7.6-1.3-2.2-.4-4.5-.7-6.7-1.1.5-1.4.9-2.9 1.2-4.4 3.2-14.1.4-31.2-2.6-50.9-2.6-17.3-5.4-36.1-4.6-55.1.4-9.2 1.5-18.5 5.6-27.9 4-7.4 10.2-14.1 17.5-18.7 2 1.3 4.2 2.3 6.4 3.2 7 3 15.4 4.3 22.2 4.3 4.5 0 8.4-.6 11.2-2 2.6-1.3 4.1-3.3 5-5.3 1-2.1 1.5-4.2 2.4-5.5 1.1-1.7 3.2-2.5 6.8-2.6.5 3.1 1 6.4 1.3 9.7 1.4 15.2.6 32.4-2.7 48.2-1.1 5.3-2.6 10.2-4.5 14.4-.4 1-.9 2-1.3 3l-.1.2c-5.7 12.1-14.7 23.3-24.6 30.5-8 5.9-19.2 6.5-34.3 4.9-2-.2-4-.3-6.1-.5-6.4-.5-13.4-1.4-21.4-2-24.3-1.9-37.4 8-53.7 21.5v.1c.6-2.6 1.3-5.2 2.1-7.8 12.2-36.9 37.3-70.5 55.5-92.3 16.1-22.9 20.7-41.3 22.4-64.7 1.1-31.8-24.5-135.4 77.9-135.2 80.9.1 76.3 85.3 76.8 131.4-.4 30.1 16.3 50.5 33.4 72 15.2 18 35.1 44.3 46.5 74.4 9.1 24 12.5 50.5 3.7 77.3z"
                  />
                </svg>
                Linux
              </button>
            </div>
            <div>
              <p
                class="install-tool-label text-xs uppercase tracking-wider text-white/40 font-semibold mb-2"
              >
                Install via 
                Winget
              </p>
              <div
                class="space-y-3"
              >
                <div
                  class="install-row group"
                >
                  <span
                    class="install-row-label text-[11px] font-medium text-white/40 block mb-1"
                  >
                    Latest LTS
                  </span>
                  <div
                    class="install-code-block flex items-center justify-between rounded-lg bg-white/[0.06] border border-white/[0.08] px-4 py-2.5"
                  >
                    <code
                      class="install-row-cmd text-[12px] text-white/90 font-mono"
                    >
                      winget install EclipseAdoptium.Temurin.25.JDK
                    </code>
                    <button
                      aria-label="Copy: winget install EclipseAdoptium.Temurin.25.JDK"
                      class="install-copy shrink-0 text-[11px] font-semibold text-white/30 hover:text-white/70 transition-colors opacity-0 group-hover:opacity-100 ml-3"
                    >
                      Copy
                    </button>
                  </div>
                </div>
                <div
                  class="install-row group"
                >
                  <span
                    class="install-row-label text-[11px] font-medium text-white/40 block mb-1"
                  >
                    Java 11
                  </span>
                  <div
                    class="install-code-block flex items-center justify-between rounded-lg bg-white/[0.06] border border-white/[0.08] px-4 py-2.5"
                  >
                    <code
                      class="install-row-cmd text-[12px] text-white/90 font-mono"
                    >
                      winget install EclipseAdoptium.Temurin.11.JDK
                    </code>
                    <button
                      aria-label="Copy: winget install EclipseAdoptium.Temurin.11.JDK"
                      class="install-copy shrink-0 text-[11px] font-semibold text-white/30 hover:text-white/70 transition-colors opacity-0 group-hover:opacity-100 ml-3"
                    >
                      Copy
                    </button>
                  </div>
                </div>
              </div>
              <a
                class="inline-block mt-4 text-sm font-medium text-pink hover:underline"
                href="https://docs.microsoft.com/en-us/windows/package-manager/winget/"
              >
                Read documentation →
              </a>
            </div>
          </div>
        </section>
        <article
          class="doc-content prose prose-invert prose-base max-w-none"
        >
          <div>
            <div>
              Mock content
            </div>
          </div>
        </article>
        <div
          class="doc-footer h-px my-8 border border-white/10 light:border-gray-200"
        />
        <div
          class="space-y-4"
        >
          <div
            class="doc-edit-card w-full backdrop-blur-sm bg-gradient-to-br from-[#20114D]/30 to-[#2A0845]/40 light:bg-gray-50 light:from-gray-50 light:to-gray-100 px-8 py-6 rounded-2xl border border-white/10 light:border-gray-200 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:border-white/20 flex flex-col md:flex-row justify-between items-center gap-6"
          >
            <div
              class="flex items-center gap-5"
            >
              <div
                class="relative w-16 h-16 md:w-20 md:h-20 flex-shrink-0"
              >
                <div
                  class="doc-edit-glow absolute inset-0 bg-gradient-to-tr from-pink-500 to-purple-600 rounded-full opacity-30 blur-md"
                />
                <img
                  alt="edit icon"
                  class="doc-edit-icon relative w-full h-full p-3 bg-[#200D46]/60 border border-white/20 rounded-full shadow-md"
                  src="/images/icons/edit.svg"
                />
              </div>
              <div
                class="flex flex-col gap-2"
              >
                <h2
                  class="doc-edit-title text-white light:text-gray-900 text-xl md:text-2xl font-bold leading-tight"
                >
                  Text
                </h2>
                <p
                  class="doc-edit-desc text-white/90 light:text-gray-500 text-sm md:text-base font-normal leading-relaxed max-w-lg"
                >
                  Text
                </p>
              </div>
            </div>
            <a
              class="flex-shrink-0"
              href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/installation/path.adoc"
              rel="noopener noreferrer"
              target="_blank"
            >
              <button
                class="group relative px-6 py-3 overflow-hidden rounded-xl bg-gradient-to-r from-[#FF3366] to-[#9933FF] text-white text-base leading-6 font-medium shadow-md transition-all duration-300 hover:shadow-lg hover:scale-105"
              >
                <span
                  class="relative z-10 flex items-center gap-2"
                >
                  <svg
                    class="h-5 w-5"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
                    />
                  </svg>
                  Text
                </span>
                <div
                  class="absolute inset-0 w-full h-full bg-gradient-to-r from-pink-600 to-purple-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
                />
              </button>
            </a>
          </div>
          <div
            class="mt-10 flex-col justify-center items-start gap-4"
          >
            <div
              class="doc-authors-title self-stretch text-white my-5 text-lg font-semibold leading-normal"
            >
              Text
            </div>
            <div
              class="flex flex-wrap justify-start items-center space-x-[-12px]"
            >
              <a
                aria-label="Author"
                href="https://github.com/Author"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt="Author"
                  class="doc-author-avatar rounded-full border-solid border-4 border-purple mb-6"
                  height="55"
                  src="https://github.com/Author.png?size=55"
                  width="55"
                />
              </a>
            </div>
          </div>
          <div
            class="doc-community-banner inline-flex items-center gap-3 flex-wrap pt-4"
          >
            <svg
              class="doc-community-icon w-5 h-5 text-gray-400 flex-shrink-0"
              fill="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.042 15.165a2.528 2.528 0 0 1-2.52 2.523A2.528 2.528 0 0 1 0 15.165a2.527 2.527 0 0 1 2.522-2.52h2.52v2.52zm1.271 0a2.527 2.527 0 0 1 2.521-2.52 2.527 2.527 0 0 1 2.521 2.52v6.313A2.528 2.528 0 0 1 8.834 24a2.528 2.528 0 0 1-2.521-2.522v-6.313zM8.834 5.042a2.528 2.528 0 0 1-2.521-2.52A2.528 2.528 0 0 1 8.834 0a2.528 2.528 0 0 1 2.521 2.522v2.52H8.834zm0 1.271a2.528 2.528 0 0 1 2.521 2.521 2.528 2.528 0 0 1-2.521 2.521H2.522A2.528 2.528 0 0 1 0 8.834a2.528 2.528 0 0 1 2.522-2.521h6.312zm10.122 2.521a2.528 2.528 0 0 1 2.522-2.521A2.528 2.528 0 0 1 24 8.834a2.528 2.528 0 0 1-2.522 2.521h-2.522V8.834zm-1.268 0a2.528 2.528 0 0 1-2.523 2.521 2.527 2.527 0 0 1-2.52-2.521V2.522A2.527 2.527 0 0 1 15.165 0a2.528 2.528 0 0 1 2.523 2.522v6.312zm-2.523 10.122a2.528 2.528 0 0 1 2.523 2.522A2.528 2.528 0 0 1 15.165 24a2.527 2.527 0 0 1-2.52-2.522v-2.522h2.52zm0-1.268a2.527 2.527 0 0 1-2.52-2.523 2.526 2.526 0 0 1 2.52-2.52h6.313A2.527 2.527 0 0 1 24 15.165a2.528 2.528 0 0 1-2.522 2.523h-6.313z"
              />
            </svg>
            <span
              class="doc-community-desc text-gray-400 light:text-gray-500 text-sm"
            >
              Join our Slack channel to discuss and reach out to maintainers.
            </span>
            <a
              class="flex-shrink-0"
              href="/slack"
            >
              <span
                class="inline-flex items-center px-4 py-1.5 text-sm font-medium text-white bg-pink rounded-lg hover:opacity-90 transition-opacity"
              >
                Join Slack
              </span>
            </a>
          </div>
        </div>
      </div>
      <aside
        class="hidden xl:block w-56 flex-shrink-0"
      >
        <div
          class="doc-toc-sidebar sticky top-20 overflow-y-auto max-h-[calc(100vh-5rem)] py-8 pl-6 border-l border-white/10 light:border-gray-200"
        />
      </aside>
    </div>
  </div>
</div>
`;

exports[`AsciidocPage > renders correctly with English locale 1`] = `
<div
  class="doc-wrapper pt-4 light:bg-white"
>
  <div
    class="doc-header border-b border-white/10 light:bg-white light:border-gray-200"
  >
    <div
      class="mx-auto max-w-[1400px] w-full px-4 sm:px-6 lg:px-8 py-6 lg:pl-[calc(16rem+2rem)]"
    >
      <div
        class="flex items-center justify-between mb-3"
      >
        <nav
          aria-label="Breadcrumb"
          class="flex items-center text-sm text-gray-400 light:text-gray-500"
        >
          <a
            class="hover:text-white light:hover:text-gray-900 transition-colors"
            href="/"
          >
            Home
          </a>
          <svg
            class="w-4 h-4 mx-1.5 text-gray-600"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="text-gray-200 light:text-gray-900"
          >
            Page Title
          </span>
        </nav>
        <button
          aria-label="Switch to light mode"
          class="flex items-center gap-2 text-xs transition-colors px-2 py-1 rounded-md border text-gray-400 hover:text-white border-white/10 hover:border-white/20"
        >
          <svg
            class="w-3.5 h-3.5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Light
        </button>
      </div>
      <h1
        class="text-2xl md:text-3xl font-semibold text-white light:text-gray-900 tracking-tight"
      >
        Page Title
      </h1>
    </div>
  </div>
  <div
    class="doc-layout mx-auto max-w-[1400px] w-full px-4 sm:px-6 lg:px-8 pb-16 light:bg-white"
  >
    <div
      class="flex flex-col lg:flex-row"
    >
      <aside
        aria-label="Documentation navigation"
        class="hidden lg:block w-64 flex-shrink-0"
      >
        <div
          class="doc-sidebar sticky top-20 overflow-y-auto max-h-[calc(100vh-5rem)] py-8 pr-6 border-r border-white/10 light:border-gray-200"
        >
          <nav
            aria-label="Documentation navigation"
            class="w-full"
          >
            <div
              class="mb-3"
            >
              <p
                class="text-xs font-semibold uppercase tracking-wider text-gray-400 light:text-gray-500 mb-3 px-3"
              >
                Documentation
              </p>
            </div>
            <ul
              class="space-y-0.5"
            >
              <li>
                <a
                  class="block px-3 py-2 rounded-md text-sm transition-colors duration-150 text-gray-300 hover:bg-white/5 hover:text-white light:text-gray-900 light:hover:bg-gray-100 light:hover:text-gray-900"
                  href="/test"
                >
                  Page Title
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </aside>
      <div
        class="flex-1 min-w-0 py-8 lg:px-10"
        role="article"
      >
        <article
          class="doc-content prose prose-invert prose-base max-w-none"
        >
          <div>
            <div>
              Mock content
            </div>
          </div>
        </article>
        <div
          class="doc-footer h-px my-8 border border-white/10 light:border-gray-200"
        />
        <div
          class="space-y-4"
        >
          <div
            class="doc-edit-card w-full backdrop-blur-sm bg-gradient-to-br from-[#20114D]/30 to-[#2A0845]/40 light:bg-gray-50 light:from-gray-50 light:to-gray-100 px-8 py-6 rounded-2xl border border-white/10 light:border-gray-200 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:border-white/20 flex flex-col md:flex-row justify-between items-center gap-6"
          >
            <div
              class="flex items-center gap-5"
            >
              <div
                class="relative w-16 h-16 md:w-20 md:h-20 flex-shrink-0"
              >
                <div
                  class="doc-edit-glow absolute inset-0 bg-gradient-to-tr from-pink-500 to-purple-600 rounded-full opacity-30 blur-md"
                />
                <img
                  alt="edit icon"
                  class="doc-edit-icon relative w-full h-full p-3 bg-[#200D46]/60 border border-white/20 rounded-full shadow-md"
                  src="/images/icons/edit.svg"
                />
              </div>
              <div
                class="flex flex-col gap-2"
              >
                <h2
                  class="doc-edit-title text-white light:text-gray-900 text-xl md:text-2xl font-bold leading-tight"
                >
                  Text
                </h2>
                <p
                  class="doc-edit-desc text-white/90 light:text-gray-500 text-sm md:text-base font-normal leading-relaxed max-w-lg"
                >
                  Text
                </p>
              </div>
            </div>
            <a
              class="flex-shrink-0"
              href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/test/path.adoc"
              rel="noopener noreferrer"
              target="_blank"
            >
              <button
                class="group relative px-6 py-3 overflow-hidden rounded-xl bg-gradient-to-r from-[#FF3366] to-[#9933FF] text-white text-base leading-6 font-medium shadow-md transition-all duration-300 hover:shadow-lg hover:scale-105"
              >
                <span
                  class="relative z-10 flex items-center gap-2"
                >
                  <svg
                    class="h-5 w-5"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
                    />
                  </svg>
                  Text
                </span>
                <div
                  class="absolute inset-0 w-full h-full bg-gradient-to-r from-pink-600 to-purple-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
                />
              </button>
            </a>
          </div>
          <div
            class="mt-10 flex-col justify-center items-start gap-4"
          >
            <div
              class="doc-authors-title self-stretch text-white my-5 text-lg font-semibold leading-normal"
            >
              Text
            </div>
            <div
              class="flex flex-wrap justify-start items-center space-x-[-12px]"
            >
              <a
                aria-label="Author"
                href="https://github.com/Author"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt="Author"
                  class="doc-author-avatar rounded-full border-solid border-4 border-purple mb-6"
                  height="55"
                  src="https://github.com/Author.png?size=55"
                  width="55"
                />
              </a>
            </div>
          </div>
          <div
            class="doc-community-banner inline-flex items-center gap-3 flex-wrap pt-4"
          >
            <svg
              class="doc-community-icon w-5 h-5 text-gray-400 flex-shrink-0"
              fill="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.042 15.165a2.528 2.528 0 0 1-2.52 2.523A2.528 2.528 0 0 1 0 15.165a2.527 2.527 0 0 1 2.522-2.52h2.52v2.52zm1.271 0a2.527 2.527 0 0 1 2.521-2.52 2.527 2.527 0 0 1 2.521 2.52v6.313A2.528 2.528 0 0 1 8.834 24a2.528 2.528 0 0 1-2.521-2.522v-6.313zM8.834 5.042a2.528 2.528 0 0 1-2.521-2.52A2.528 2.528 0 0 1 8.834 0a2.528 2.528 0 0 1 2.521 2.522v2.52H8.834zm0 1.271a2.528 2.528 0 0 1 2.521 2.521 2.528 2.528 0 0 1-2.521 2.521H2.522A2.528 2.528 0 0 1 0 8.834a2.528 2.528 0 0 1 2.522-2.521h6.312zm10.122 2.521a2.528 2.528 0 0 1 2.522-2.521A2.528 2.528 0 0 1 24 8.834a2.528 2.528 0 0 1-2.522 2.521h-2.522V8.834zm-1.268 0a2.528 2.528 0 0 1-2.523 2.521 2.527 2.527 0 0 1-2.52-2.521V2.522A2.527 2.527 0 0 1 15.165 0a2.528 2.528 0 0 1 2.523 2.522v6.312zm-2.523 10.122a2.528 2.528 0 0 1 2.523 2.522A2.528 2.528 0 0 1 15.165 24a2.527 2.527 0 0 1-2.52-2.522v-2.522h2.52zm0-1.268a2.527 2.527 0 0 1-2.52-2.523 2.526 2.526 0 0 1 2.52-2.52h6.313A2.527 2.527 0 0 1 24 15.165a2.528 2.528 0 0 1-2.522 2.523h-6.313z"
              />
            </svg>
            <span
              class="doc-community-desc text-gray-400 light:text-gray-500 text-sm"
            >
              Join our Slack channel to discuss and reach out to maintainers.
            </span>
            <a
              class="flex-shrink-0"
              href="/slack"
            >
              <span
                class="inline-flex items-center px-4 py-1.5 text-sm font-medium text-white bg-pink rounded-lg hover:opacity-90 transition-opacity"
              >
                Join Slack
              </span>
            </a>
          </div>
        </div>
      </div>
      <aside
        class="hidden xl:block w-56 flex-shrink-0"
      >
        <div
          class="doc-toc-sidebar sticky top-20 overflow-y-auto max-h-[calc(100vh-5rem)] py-8 pl-6 border-l border-white/10 light:border-gray-200"
        />
      </aside>
    </div>
  </div>
</div>
`;

exports[`AsciidocPage > renders correctly with non-English locale 1`] = `
<div
  class="doc-wrapper pt-4 light:bg-white"
>
  <div
    class="doc-header border-b border-white/10 light:bg-white light:border-gray-200"
  >
    <div
      class="mx-auto max-w-[1400px] w-full px-4 sm:px-6 lg:px-8 py-6 lg:pl-[calc(16rem+2rem)]"
    >
      <div
        class="flex items-center justify-between mb-3"
      >
        <nav
          aria-label="Breadcrumb"
          class="flex items-center text-sm text-gray-400 light:text-gray-500"
        >
          <a
            class="hover:text-white light:hover:text-gray-900 transition-colors"
            href="/"
          >
            Home
          </a>
          <svg
            class="w-4 h-4 mx-1.5 text-gray-600"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="text-gray-200 light:text-gray-900"
          >
            Page Title
          </span>
        </nav>
        <button
          aria-label="Switch to light mode"
          class="flex items-center gap-2 text-xs transition-colors px-2 py-1 rounded-md border text-gray-400 hover:text-white border-white/10 hover:border-white/20"
        >
          <svg
            class="w-3.5 h-3.5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Light
        </button>
      </div>
      <h1
        class="text-2xl md:text-3xl font-semibold text-white light:text-gray-900 tracking-tight"
      >
        Page Title
      </h1>
    </div>
  </div>
  <div
    class="doc-layout mx-auto max-w-[1400px] w-full px-4 sm:px-6 lg:px-8 pb-16 light:bg-white"
  >
    <div
      class="flex flex-col lg:flex-row"
    >
      <aside
        aria-label="Documentation navigation"
        class="hidden lg:block w-64 flex-shrink-0"
      >
        <div
          class="doc-sidebar sticky top-20 overflow-y-auto max-h-[calc(100vh-5rem)] py-8 pr-6 border-r border-white/10 light:border-gray-200"
        >
          <nav
            aria-label="Documentation navigation"
            class="w-full"
          >
            <div
              class="mb-3"
            >
              <p
                class="text-xs font-semibold uppercase tracking-wider text-gray-400 light:text-gray-500 mb-3 px-3"
              >
                Documentation
              </p>
            </div>
            <ul
              class="space-y-0.5"
            >
              <li>
                <a
                  class="block px-3 py-2 rounded-md text-sm transition-colors duration-150 text-gray-300 hover:bg-white/5 hover:text-white light:text-gray-900 light:hover:bg-gray-100 light:hover:text-gray-900"
                  href="/test"
                >
                  Page Title
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </aside>
      <div
        class="flex-1 min-w-0 py-8 lg:px-10"
        role="article"
      >
        <div
          class="mb-6 bg-purple-950/40 border-l-4 border-purple-400 p-4 rounded-md shadow-sm"
        >
          <div
            class="flex"
          >
            <div
              class="flex-shrink-0"
            >
              <svg
                class="h-5 w-5 text-purple-400"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="ml-3"
            >
              <div
                class="text-sm text-gray-300"
              >
                <div>
                  Translated warning
                </div>
              </div>
            </div>
          </div>
        </div>
        <article
          class="doc-content prose prose-invert prose-base max-w-none"
        >
          <div>
            <div>
              Mock content
            </div>
          </div>
        </article>
        <div
          class="doc-footer h-px my-8 border border-white/10 light:border-gray-200"
        />
        <div
          class="space-y-4"
        >
          <div
            class="doc-edit-card w-full backdrop-blur-sm bg-gradient-to-br from-[#20114D]/30 to-[#2A0845]/40 light:bg-gray-50 light:from-gray-50 light:to-gray-100 px-8 py-6 rounded-2xl border border-white/10 light:border-gray-200 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:border-white/20 flex flex-col md:flex-row justify-between items-center gap-6"
          >
            <div
              class="flex items-center gap-5"
            >
              <div
                class="relative w-16 h-16 md:w-20 md:h-20 flex-shrink-0"
              >
                <div
                  class="doc-edit-glow absolute inset-0 bg-gradient-to-tr from-pink-500 to-purple-600 rounded-full opacity-30 blur-md"
                />
                <img
                  alt="edit icon"
                  class="doc-edit-icon relative w-full h-full p-3 bg-[#200D46]/60 border border-white/20 rounded-full shadow-md"
                  src="/images/icons/edit.svg"
                />
              </div>
              <div
                class="flex flex-col gap-2"
              >
                <h2
                  class="doc-edit-title text-white light:text-gray-900 text-xl md:text-2xl font-bold leading-tight"
                >
                  Text
                </h2>
                <p
                  class="doc-edit-desc text-white/90 light:text-gray-500 text-sm md:text-base font-normal leading-relaxed max-w-lg"
                >
                  Text
                </p>
              </div>
            </div>
            <a
              class="flex-shrink-0"
              href="https://github.com/adoptium/adoptium.net/edit/main/content/asciidoc-pages/test/path.adoc"
              rel="noopener noreferrer"
              target="_blank"
            >
              <button
                class="group relative px-6 py-3 overflow-hidden rounded-xl bg-gradient-to-r from-[#FF3366] to-[#9933FF] text-white text-base leading-6 font-medium shadow-md transition-all duration-300 hover:shadow-lg hover:scale-105"
              >
                <span
                  class="relative z-10 flex items-center gap-2"
                >
                  <svg
                    class="h-5 w-5"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
                    />
                  </svg>
                  Text
                </span>
                <div
                  class="absolute inset-0 w-full h-full bg-gradient-to-r from-pink-600 to-purple-700 opacity-0 group-hover:opacity-100 transition-opacity duration-300"
                />
              </button>
            </a>
          </div>
          <div
            class="mt-10 flex-col justify-center items-start gap-4"
          >
            <div
              class="doc-authors-title self-stretch text-white my-5 text-lg font-semibold leading-normal"
            >
              Text
            </div>
            <div
              class="flex flex-wrap justify-start items-center space-x-[-12px]"
            >
              <a
                aria-label="Author"
                href="https://github.com/Author"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  alt="Author"
                  class="doc-author-avatar rounded-full border-solid border-4 border-purple mb-6"
                  height="55"
                  src="https://github.com/Author.png?size=55"
                  width="55"
                />
              </a>
            </div>
          </div>
          <div
            class="doc-community-banner inline-flex items-center gap-3 flex-wrap pt-4"
          >
            <svg
              class="doc-community-icon w-5 h-5 text-gray-400 flex-shrink-0"
              fill="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.042 15.165a2.528 2.528 0 0 1-2.52 2.523A2.528 2.528 0 0 1 0 15.165a2.527 2.527 0 0 1 2.522-2.52h2.52v2.52zm1.271 0a2.527 2.527 0 0 1 2.521-2.52 2.527 2.527 0 0 1 2.521 2.52v6.313A2.528 2.528 0 0 1 8.834 24a2.528 2.528 0 0 1-2.521-2.522v-6.313zM8.834 5.042a2.528 2.528 0 0 1-2.521-2.52A2.528 2.528 0 0 1 8.834 0a2.528 2.528 0 0 1 2.521 2.522v2.52H8.834zm0 1.271a2.528 2.528 0 0 1 2.521 2.521 2.528 2.528 0 0 1-2.521 2.521H2.522A2.528 2.528 0 0 1 0 8.834a2.528 2.528 0 0 1 2.522-2.521h6.312zm10.122 2.521a2.528 2.528 0 0 1 2.522-2.521A2.528 2.528 0 0 1 24 8.834a2.528 2.528 0 0 1-2.522 2.521h-2.522V8.834zm-1.268 0a2.528 2.528 0 0 1-2.523 2.521 2.527 2.527 0 0 1-2.52-2.521V2.522A2.527 2.527 0 0 1 15.165 0a2.528 2.528 0 0 1 2.523 2.522v6.312zm-2.523 10.122a2.528 2.528 0 0 1 2.523 2.522A2.528 2.528 0 0 1 15.165 24a2.527 2.527 0 0 1-2.52-2.522v-2.522h2.52zm0-1.268a2.527 2.527 0 0 1-2.52-2.523 2.526 2.526 0 0 1 2.52-2.52h6.313A2.527 2.527 0 0 1 24 15.165a2.528 2.528 0 0 1-2.522 2.523h-6.313z"
              />
            </svg>
            <span
              class="doc-community-desc text-gray-400 light:text-gray-500 text-sm"
            >
              Join our Slack channel to discuss and reach out to maintainers.
            </span>
            <a
              class="flex-shrink-0"
              href="/slack"
            >
              <span
                class="inline-flex items-center px-4 py-1.5 text-sm font-medium text-white bg-pink rounded-lg hover:opacity-90 transition-opacity"
              >
                Join Slack
              </span>
            </a>
          </div>
        </div>
      </div>
      <aside
        class="hidden xl:block w-56 flex-shrink-0"
      >
        <div
          class="doc-toc-sidebar sticky top-20 overflow-y-auto max-h-[calc(100vh-5rem)] py-8 pl-6 border-l border-white/10 light:border-gray-200"
        />
      </aside>
    </div>
  </div>
</div>
`;
